--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,17 @@
     "cron": "4.3.0",
     "dotenv": "16.5.0",
     "drizzle-orm": "0.44.2",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "@types/pg": "^8.15.4",
     "drizzle-kit": "0.31.1",
     "nodemon": "3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
